--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,9 +1,9 @@
 .body {
     width: calc(100% - 5rem);
     margin-left: 5rem;
-    z-index: 0;
+    /* z-index: 0; */
     position: relative;
-    top: 0;
+    /* top: 0; */
     transition: all 0.5s ease;
     background: #f4f7fa;
     padding: 3rem;
