--- a/src/app/voucher/voucher.component.html
+++ b/src/app/voucher/voucher.component.html
@@ -4,9 +4,30 @@
         <div>
             <button class="btn btn-warning me-2">Seuil d'alerte</button>
             <button class="btn btn-warning me-2">Exporter</button>
-            <button class="btn btn-primary">Ajouter un bon d'achat</button>
+            <button class="btn btn-primary" (click)="modalBonAchat.openModal()">Ajouter un bon d'achat</button>
         </div>
     </div>
+    <app-modal #modalBonAchat [title]="'Ajouter un bon'">
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Unitaire</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">En masse</a>
+            </li>
+        </ul>
+
+        <div class="form-group mt-3">
+            <input type="text" class="form-control" placeholder="Saisissez le montant">
+        </div>
+        <div class="form-group mt-2">
+            <input type="text" class="form-control" placeholder="Saisissez le code">
+        </div>
+        <div class="form-group mt-2">
+            <input type="date" class="form-control" placeholder="Date d'expiration">
+        </div>
+
+    </app-modal>
 
     <div class="card mt-4 ">
         <div class="card-header d-flex justify-content-between align-items-center bg-white">
