--- a/src/app/voucher/voucher.component.html
+++ b/src/app/voucher/voucher.component.html
@@ -100,6 +100,7 @@
         </div>
 
     </div>
+    <!-- Pagination -->
     <div class="d-flex justify-content-between align-items-center mt-4">
         <div class="dropdown custom-dropdown">
             <button class="btn btn-secondary custom-dropdown-btn" type="button" id="dropdownMenuButton"
