--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<!-- <app-left-sidebar [isLeftSidebarCollapsed]="isLeftSidebarCollapsed()"
+<app-left-sidebar [isLeftSidebarCollapsed]="isLeftSidebarCollapsed()"
   (changeIsLeftSidebarCollapsed)="changeIsLeftSidebarCollapsed($event)" />
 
-<app-main [isLeftSidebarCollapsed]="isLeftSidebarCollapsed()" [screenWidth]="screenWidth()" /> -->
-<app-gift-card></app-gift-card>
+<app-main [isLeftSidebarCollapsed]="isLeftSidebarCollapsed()" [screenWidth]="screenWidth()" />
+<!-- <app-gift-card></app-gift-card> -->
