--- a/src/app/gift-card/gift-card.component.html
+++ b/src/app/gift-card/gift-card.component.html
@@ -1,3 +1,5 @@
+<app-toast #appToast [message]="customMessage" [iconClass]="customIconClass" [textClass]="customTextClass" />
+
 <div class="container-fluid mt-5">
     <div class="row">
         <!-- Colonne du formulaire -->
