--- a/src/app/modal/modal.component.css
+++ b/src/app/modal/modal.component.css
@@ -3,15 +3,23 @@
     /* z-index supérieur à la sidebar */
 }
 
+.modal-header {
+    border-bottom: none;
+}
+
+.modal-footer {
+    border-top: none;
+}
+
 .modal-content {
     padding: 30px;
     width: 600px;
-    height: 400px;
+    /* height: 400px; */
     border-radius: 20px;
     border: none;
 }
 
-.custom-cancel-btn {
+/* .custom-cancel-btn {
     width: 106px;
     height: 47px;
     font: normal normal 600 16px/23px Proxima Nova;
@@ -27,4 +35,4 @@
     background-color: #02B3D7;
     color: #FFFFFF;
     border-radius: 60px;
-}
+} */
