--- a/src/app/toast/toast.component.html
+++ b/src/app/toast/toast.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-center align-items-center w-100">
+<div class="toast-container d-flex justify-content-center align-items-center w-100">
     <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" #liveToast>
         <div class="d-flex">
             <div class="toast-body p-4">
