--- a/src/app/voucher/voucher.component.html
+++ b/src/app/voucher/voucher.component.html
@@ -8,25 +8,53 @@
         </div>
     </div>
     <app-modal #modalBonAchat [title]="'Ajouter un bon'">
-        <ul class="nav nav-tabs">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Unitaire</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">En masse</a>
-            </li>
-        </ul>
+        <div class="modal-content">
+            <div class="modal-header">
+                <div class="w-100 p-3">
+                    <h1 class="modal-title fs-5 mb-0">Personnalisé</h1>
+                    <p class="text-muted">Choisissez un design qui correspond aux goûts du destinataire</p>
+                </div>
+            </div>
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col p-0 me-5">
+                            <form>
+                                <div class="form-group mb-2">
+                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                </div>
 
-        <div class="form-group mt-3">
-            <input type="text" class="form-control" placeholder="Saisissez le montant">
-        </div>
-        <div class="form-group mt-2">
-            <input type="text" class="form-control" placeholder="Saisissez le code">
-        </div>
-        <div class="form-group mt-2">
-            <input type="date" class="form-control" placeholder="Date d'expiration">
-        </div>
+                                <div class="d-flex align-items-center border rounded p-0 mb-2" style="width: 351px;">
+                                    <div class="w-50 mb-0 p-2" style="width: 60px;">Couleur</div>
+                                    <div
+                                        class="border border-end-0 border-top-0 border-bottom-0 w-50 d-flex justify-content-between align-items-center pe-2">
+                                        <input type="text" class="form-control border-0" value="#12245C"
+                                            style="max-width: 100px;">
+                                        <div class="ms-auto color-input-wrapper"
+                                            style="width: 30px; height: 30px; border-radius: 50%;">
+                                            <input type="color" formControlName="color" class="form-control">
+                                        </div>
+                                    </div>
+                                </div>
 
+                                <label for="file-upload" class="btn btn-outline-secondary w-100 border">Changer une
+                                    image</label>
+                                <input id="file-upload" #fileInput type="file" (change)="onFileSelected($event)"
+                                    style="display: none;" accept="image/jpeg,image/png,image/gif">
+                                <small class="text-muted">Formats autorisés: JPG, GIF, PNG</small>
+                            </form>
+                        </div>
+                        <div class="col p-0">
+                            <img src="carte_bleu@2x.png" class="img-fluid" alt="Voucher Preview" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer d-flex justify-content-between align-items-center">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+                <button type="button" class="btn btn-primary">Enregistrer</button>
+            </div>
+        </div>
     </app-modal>
 
     <div class="card mt-4 ">
